added creating orders

--- a/pages/index/detail.wxss
+++ b/pages/index/detail.wxss
@@ -39,3 +39,38 @@
   width: 100%;
   padding: 25rpx;
 }
+
+.section {
+  background-color: white;
+  margin: 20px 0px;
+  padding: 5px;
+  border-radius:4px;
+}
+
+.mini-btn{
+  margin: 10rpx 0px 0px 100rpx;
+  padding: 5rpx 10rpx;
+}
+
+/* pages/show/show.wxss */
+.container {
+  align-items: center;
+}
+.card {
+  background-color: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  overflow: hidden;
+  height: 100%;
+  padding: 10px;
+  display: row;
+}
+.section {
+  background-color: white;
+  margin: 20px 0px;
+  padding: 5px;
+  border-radius:4px;
+}
+.mini-btn{
+  margin: 10rpx 0px 0px 100rpx;
+  padding: 5rpx 10rpx;
+}
